# sdh-ajax

./: .hgignore  CHANGELOG.txt  pyproject.toml  setup.py
src/sdh/ajax/: __init__.py  accept_ajax.py
src/sdh/ajax/static/js/: sdh-ajax.js
